# ProGCC-V3-Plus

./: .gitignore  .gitmodules  README.md
FW/: CMakeLists.txt  PROGCC3.1_RP2040_manifest.json  PROGCC3.2_RP2040_manifest.json  PROGCCPLUS_ERM_RP2040_manifest.json  manifest.json
FW/RP2040/include/: board_config.h  main.h
FW/RP2040/src/: main.c
FW/include/: app_rumble.h  board_config.h  egg.h  main.h
FW/src/: app_hwtest.c  app_imu.c  app_rumble_dualhaptic.c  app_rumble_erm.c  app_rumble_haptic.c  main.c
PCB/bom_scripts/: bom_progcc_export.py
PCB/main/: procon_gcc_main_pcb.csv  procon_gcc_main_pcb.kicad_pro  procon_gcc_main_pcb.kicad_sch
PCB/main_3.1/: procon_gcc_main_pcb.csv  procon_gcc_main_pcb.kicad_pcb  procon_gcc_main_pcb.kicad_prl  procon_gcc_main_pcb.kicad_pro  procon_gcc_main_pcb.kicad_sch  procon_gcc_main_pcb.xml  procon_gcc_main_pcb_bluetooth.csv  procon_gcc_main_pcb_usb.csv
PCB/main_3.2/: fp-info-cache  progcc_3.2_main.kicad_pcb  progcc_3.2_main.kicad_prl  progcc_3.2_main.kicad_pro  progcc_3.2_main.kicad_sch
PCB/main_3.3/: fp-info-cache  progcc_3.3_main.kicad_pcb  progcc_3.3_main.kicad_prl  progcc_3.3_main.kicad_pro  progcc_3.3_main.kicad_sch
PCB/main_erm/: fp-info-cache  procon_gcc_main_pcb.csv  procon_gcc_main_pcb.kicad_pcb  procon_gcc_main_pcb.kicad_prl  procon_gcc_main_pcb.kicad_pro  procon_gcc_main_pcb.kicad_sch  procon_gcc_main_pcb.xml
PCB/main_haptic/: PROGCCPLUS_HAPTIC_RP2040.uf2  procon_gcc_main_pcb.kicad_pcb  procon_gcc_main_pcb.kicad_pro  procon_gcc_main_pcb.kicad_sch  procon_gcc_main_pcb.xml
PCB/production/: ProGCC Plus BOM.xlsx  ProGCC+ PCB Notes (Haptic Version).xlsx  ProGCC+ PCB Notes.xlsx
PCB/production/gerber/: procon_gcc_main_pcb-B_Courtyard.gbr  procon_gcc_main_pcb-B_Cu.gbr  procon_gcc_main_pcb-B_Fab.gbr  procon_gcc_main_pcb-B_Mask.gbr  procon_gcc_main_pcb-B_Paste.gbr  procon_gcc_main_pcb-B_Silkscreen.gbr  procon_gcc_main_pcb-Edge_Cuts.gbr  procon_gcc_main_pcb-F_Courtyard.gbr  procon_gcc_main_pcb-F_Cu.gbr  procon_gcc_main_pcb-F_Fab.gbr  procon_gcc_main_pcb-F_Mask.gbr  procon_gcc_main_pcb-F_Paste.gbr  procon_gcc_main_pcb-F_Silkscreen.gbr  procon_gcc_main_pcb-In1_Cu.gbr  procon_gcc_main_pcb-In2_Cu.gbr  procon_gcc_main_pcb-NPTH-drl_map.gbr  procon_gcc_main_pcb-NPTH.drl  procon_gcc_main_pcb-PTH-drl_map.gbr  procon_gcc_main_pcb-PTH.drl
PCB/production/main/gerber/: procon_gcc_main_pcb-B_Courtyard.gbr  procon_gcc_main_pcb-B_Fab.gbr  (+9 more)
PCB/production/main_3.1/: ProGCC 3.1 Kit Notes.xlsx  ProGCC 3.1 PCB Notes.xlsx  progcc_3.1_BOM.csv
PCB/production/main_3.2/: BOM ProGCC 3.2 Wired and Wireless.xlsx  BOM ProGCC 3.2 Wired_Wireless.xlsx  ProGCC 3.2 BOM Wired and Wireless.xlsx  ProGCC 3.2 Kit Notes.xlsx  ProGCC 3.2 PCB Notes.xlsx  progcc_3.2_BOM.csv  progcc_3.2_main_all.csv  progcc_3.2_main_wired.csv  progcc_3.2_main_wireless.csv
PCB/production/main_3.3/: ProGCC 3.3 BOM.xlsx  Updated 2.5.2025.txt  progcc_3.3_main_ALL.csv
PCB/production/placement/: procon_gcc_main_pcb-bottom.pos  procon_gcc_main_pcb-top.pos
PCB/progcc_v3_main/: fp-info-cache  procon_gcc_main_pcb.csv  procon_gcc_main_pcb.kicad_pcb  procon_gcc_main_pcb.kicad_prl  procon_gcc_main_pcb.kicad_pro  procon_gcc_main_pcb.kicad_sch  procon_gcc_main_pcb.xml
(+111 files in other folders)
